--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "react-treasure-hunt",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rohit-narang.github.io/react-treasure-hunt",
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -14,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+   "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
