--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-treasure-hunt",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rohit-narang.github.io/",
+  "homepage": ".",
   "dependencies": {
     "gh-pages": "^2.1.1",
     "lodash": "^4.17.15",
