--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "react-treasure-hunt",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
   "dependencies": {
     "gh-pages": "^2.1.1",
     "lodash": "^4.17.15",
@@ -18,9 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
